--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <div class="leftNav">Paria Almasi>
+        <div class="leftNav">Paria Almasi
             <dl>
                 <dt>Currently in Atlanta, GA</dt>
                  <dt>Pariaalmasi.art@gmail.com</dt>
